syntax = "proto3";

package notification;

// The job application service definition.
service NotificationService {
    rpc SendNotification (SendNotificationRequest) returns (SendNotificationResponse) {}
    rpc GetNotifications (GetUserNotificationsRequest) returns (GetUserNotificationsResponse) {}
    rpc UpdateNotificationStatus (UpdateNotificationStatusRequest) returns (Empty) {}
//   rpc CreateJobApplication (CreateJobApplicationRequest) returns (JobApplication) {}
}

// The request message containing the users id.
message User {
    int32 id = 1;
}
message PaginationRequest {
    int32 page = 1;
    int32 limit = 2;
}
message PaginaionResponse {
    int32 total = 1;
    int32 page = 2;
    int32 limit = 3;
}

message SendNotificationRequest {
    string title = 1;
    string content = 2;
    string link = 3;
    repeated User users = 4;
}

// The response message containing the greetings
message SendNotificationResponse {
    
}

enum status {
    UNREAD = 0;
    READ = 1;
}

message Notification {
    int32 id = 1;
    string title = 2;
    string content = 3;
    string link = 4;
    status status = 5;
}

message GetUserNotificationsRequest {
    User user = 1;
    optional PaginationRequest paginationRequest = 2;
}

message GetUserNotificationsResponse {
    PaginaionResponse pagination = 1;
    repeated Notification data = 2;
}

message UpdateNotificationStatusRequest {
    User user = 1;
    int32 notificationId = 2;
    status status = 3;
}

message Empty {}